--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "start": "electron .",
     "debug": "electron . -d",
     "build:debug": "./node_modules/.bin/build --dir",
-    "build-compile:debug": "npm run compile && npm run build:debug",
-    "build-quick:debug": "./node_modules/.bin/build --dir --c.npmRebuild=false",
-    "build-quick-compile:debug": "npm run compile && npm run build-quick:debug",
+    "build:debug-compile": "npm run compile && npm run build:debug",
+    "build:debug-quick": "./node_modules/.bin/build --dir --c.npmRebuild=false",
+    "build:debug-quick-compile": "npm run compile && npm run build-quick:debug",
     "clean": "npm run clean:code && npm run clean:css",
     "compile": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && npm run min && echo Compile Done",
     "compile:debug": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && copy out\\*.js build\\js\\ && xcopy /Y /E /I out\\editor build\\js\\editor && echo Compile Done",
