--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "release:mac": "npm run compile && npm run package:mac",
     "clean:code": "del /q .\\out\\*.js && del /q .\\out\\editor\\*.js && del /q .\\build\\js\\*.js && del /q .\\build\\js\\editor\\*.js",
     "clean:css": "del /q .\\build\\css\\*.css",
-    "clean:dist": "rm -rf ./dist"
+    "clean:dist": "rm -rf ./dist",
+    "list": "asar l .\\dist\\win-unpacked\\resources\\app.asar > .\\dist\\files%npm_package_version%.txt"
   },
   "devDependencies": {
     "@types/bootstrap": "^3.3.40",
