--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "package:winportable": "node_modules/.bin/build --win portable  --ia32 --x64",
     "package:mac": "node_modules/.bin/build --mac pkg zip",
     "package:linux": "npm run package:linux32 && npm run package:linux64",
-    "package:linux32": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz snap --ia32",
+    "package:linux32": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --ia32",
     "package:linux64": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz snap --x64",
     "min": "./node_modules/.bin/minify out -d build/js --mangle --simplify",
     "release:win": "npm run compile && npm run package:win",
