--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
   "devDependencies": {
     "@types/bootstrap": "^3.3.42",
     "@types/jquery": "^3.3.29",
-    "@types/node": "^10.14.1",
+    "@types/node": "^10.14.4",
     "babel-minify": "^0.4.3",
     "devtron": "^1.4.0",
-    "electron": "^4.1.0",
+    "electron": "^4.1.3",
     "electron-builder": "^20.39.0",
-    "eslint": "^5.15.2",
+    "eslint": "^5.15.3",
     "eslint-plugin-html": "^5.0.3"
   },
   "build": {
@@ -131,8 +131,8 @@
   "dependencies": {
     "better-sqlite3": "^5.4.0",
     "buzz": "^1.2.1",
-    "chokidar": "^2.1.2",
-    "drivelist": "^8.0.2",
+    "chokidar": "^2.1.5",
+    "drivelist": "^8.0.6",
     "electron-updater": "^4.0.6",
     "font-manager": "^0.3.0",
     "fs-extra": "^7.0.1",
@@ -141,10 +141,10 @@
     "markdown-it": "^8.4.2",
     "mathjs-expression-parser": "^1.0.2",
     "moment": "^2.24.0",
-    "monaco-editor": "^0.16.1",
+    "monaco-editor": "^0.16.2",
     "rgbcolor": "^1.0.1",
     "spellchecker": "^3.5.1",
-    "tmp": "0.0.33",
+    "tmp": "^0.1.0",
     "yargs-parser": "^13.0.0",
     "yauzl": "^2.10.0",
     "yazl": "^2.5.1"
