--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "scripts": {
     "start": "electron .",
     "debug": "electron . -d",
-    "build:debug": "./node_modules/.bin/build --dir",
+    "build:debug": "./node_modules/.bin/electron-builder --dir",
     "build:debug-compile": "npm run compile && npm run build:debug",
-    "build:debug-quick": "./node_modules/.bin/build --dir --c.npmRebuild=false",
+    "build:debug-quick": "./node_modules/.bin/electron-builder --dir --c.npmRebuild=false",
     "build:debug-quick-compile": "npm run compile && npm run build:debug-quick",
     "clean": "npm run clean:code && npm run clean:css",
     "compile": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && npm run min && echo Compile Done",
@@ -36,8 +36,8 @@
     "package:winportable": "node_modules/.bin/build --win portable  --ia32 --x64",
     "package:mac": "node_modules/.bin/build --mac pkg zip",
     "package:linux": "npm run package:linux32 && npm run package:linux64",
-    "package:linux32": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz --ia32",
-    "package:linux64": "./node_modules/.bin/build --linux deb AppImage rpm tar.xz snap --x64",
+    "package:linux32": "./node_modules/.bin/electron-builder --linux deb AppImage rpm tar.xz --ia32",
+    "package:linux64": "./node_modules/.bin/electron-builder --linux deb AppImage rpm tar.xz snap --x64",
     "min": "./node_modules/.bin/minify out -d build/js --mangle --simplify",
     "release:win": "npm run compile && npm run package:win",
     "release:linux": "npm run compile && npm run package:linux",
