--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "compile:css": "node-sass src/css/ -o build/css/ --output-style compressed",
     "compile:themes": "node-sass src/themes/ -o build/themes/ --output-style compressed",
     "package": "npm run package:win && npm run package:linux",
-    "package:win": "node_modules/.bin/build --win nsis portable --ia32 --x64",
-    "package:winportable": "node_modules/.bin/build --win portable  --ia32 --x64",
-    "package:mac": "node_modules/.bin/build --mac pkg zip",
+    "package:win": "node_modules/.bin/electron-builder --win nsis portable --ia32 --x64",
+    "package:winportable": "node_modules/.bin/electron-builder --win portable  --ia32 --x64",
+    "package:mac": "node_modules/.bin/electron-builder --mac pkg zip",
     "package:linux": "npm run package:linux32 && npm run package:linux64",
     "package:linux32": "./node_modules/.bin/electron-builder --linux deb AppImage rpm tar.xz --ia32",
     "package:linux64": "./node_modules/.bin/electron-builder --linux deb AppImage rpm tar.xz snap --x64",
