--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@types/bootstrap": "^3.4.0",
     "@types/jquery": "^3.3.31",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.11.2",
     "babel-minify": "^0.4.3",
     "devtron": "^1.4.0",
     "electron": "^6.0.12",
@@ -134,7 +134,7 @@
     "chokidar": "^3.2.2",
     "drivelist": "^8.0.7",
     "electron-updater": "^4.1.2",
-    "font-manager": "^0.3.0",
+    "fontmanager-redux": "^0.4.0",
     "fs-extra": "^8.1.0",
     "fswin": "^3.19.908",
     "lz-string": "^1.4.4",
